<resources>
    <string name="app_name">ShareE</string>

    <integer name="com_vk_sdk_AppId">7324853</integer>

    <string name="login">Login</string>
    <string name="str_share_photos_title">Делитесь фотографиями</string>
    <string name="str_share_photos_subtitle">Поделитесь фотографией на стене, и добавьте к ней описание.</string>
    <string name="str_choose_photo_btn">Выбрать фото</string>
    <string name="str_share_memory">Поделиться воспоминанием</string>
    <string name="str_need_permission_title">Необходимо разрешение</string>
    <string name="str_need_permission_message">Для того, чтобы выбрать файл необходимо разрешение на чтение файлов. Пожалуйста, выдайте необходимые разрешения в настройках.</string>
    <string name="str_go_to_settings_button">Настройки</string>
    <string name="str_share_wall_title">Поделиться на стене</string>
    <string name="str_add_comment_hint">Добавить комментарий</string>
    <string name="str_send_btn">Отправить</string>
    <string name="str_error_open_file_toast">Can\'t open file</string>
    <string name="str_no_image_picked_toast">You haven\'t picked Image</string>
    <string name="str_error_posting_toast">ERROR! Check your internet connection</string>
    <string name="str_success_posting_toast">Photo successfully posted</string>

    <string name="str_tell_about_memory">Расскажите, что происходило %s</string>
    <string name="str_error_no_old_photos">К сожалению, у вас нет старых фотографий.</string>
    <string name="str_unsibscribe_button">Отписаться</string>

    <string name="str_group_list_subinfo">Коснитесь и удерживайте, чтобы увидеть информацию о сообществе</string>
    <string name="str_unsubscribe_title">Отписаться от сообществ</string>
    <string name="str_groups_title">Сообщества</string>
    <string name="str_open_btn">Открыть</string>

    <string name="str_subscribers_info">%s подписчиков</string>
    <string name="str_last_post">Последняя запись %s</string>
    <string name="str_memory_link_description">Вы поделились воспоминанием из прошлого. Пришло время для шага в будущее! \nНе хотите отписаться от групп, куда вы давно не заходили?</string>
    <string name="str_continue_button">Продолжить</string>
    <string name="str_congratulations_headline">Поздравляем!</string>
</resources>
