<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/rounded_dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_congratulations_headline"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_memory_link_description"
        android:fontFamily="@font/roboto_regular"
        android:textSize="15sp"/>

    <LinearLayout
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/str_continue_button"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>